Add One-to-Many relationship between User and Advertisement
