# api/src/main/resources/api.yaml
@@ -155,10 +155,6 @@ components:
           format: int64
           description:
             The technical id
-        username:
-          type: string
-          description:
-            The owner of the Advertisement
         brand:
           type: string
           maxLength: 20
